[build-system]
requires = ["poetry-core>=1.9.0", "setuptools>=80", "wheel", "Cython>=3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "quarkv"
version = "0.1.0a0"
description = "Lightweight in-memory key–value database with optional persistence and vector search."
readme = "README.md"
license = "Apache-2.0"
authors = ["KVXDB Authors: Alexander Nazimov <datamlab.alex@gmail.com>"]
maintainers = ["KVXDB Maintainers: Alexander Nazimov <datamlab.alex@gmail.com>"]
keywords = ["database", "key-value", "kv", "in-memory", "vector-search", "embeddings"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
]
packages = [
  { include = "kvxdb", from = "src" }
]

include = [
  { path = "src/kvxdb/**/*.so", format = "wheel" },
  { path = "src/kvxdb/**/*.pyx", format = "sdist" },
  { path = "src/kvxdb/**/*.pxd", format = "sdist" },
  { path = "src/kvxdb/**/*.pxi", format = "sdist" },
]
exclude = ["**/*.c", "**/*.cpp"] 

[tool.poetry.dependencies]
python = ">=3.11"
setuptools = ">=80.9.0"
cython = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7"
ruff = ">=0.5"
black = ">=24.3"
mypy = ">=1.10"
pytest = ">=8.2"
pytest-cov = ">=5.0"
setuptools = ">=80.9.0"

[tool.poetry.group.ai.dependencies]
numpy = ">=2"

[tool.poetry.urls]
Homepage = "https://github.com/macht1212/kvxdb"
Repository = "https://github.com/macht1212/kvxdb"
Issues = "https://github.com/your-org/macht1212/issues"
Documentation = "https://github.com/macht1212/kvxdb#readme"

[tool.poetry.scripts]
kvxdb = "kvxdb.cli:main"

[tool.poetry.build]
script = "build.py"

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E203",  # whitespace before ':' (конфликтует с black)
  "F403",
]
fix = true

[tool.ruff.format]
quote-style = "preserve"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_equality = true
pretty = true
show_error_codes = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --maxfail=1 --disable-warnings"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/kvxdb"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
